src/stylesheets/partials/_forms.scss
//
// Forms
// --------------------------------------------------

.form-inline {
  > * + * {
    margin-left: $space-min;
  }
}

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
  background: $fieldset-bg;
  border-radius: $border-radius-small;

  .form-control {
    background: $fieldset-input-bg;
    border-color: $fieldset-input-border;

    @include form-control-focus; // sass-lint:disable-line mixins-before-declarations

    &[readonly],
    &[disabled] {
      background: $fieldset-input-bg-readonly;
    }
  }
}

.form-group {
  margin-bottom: $space-sm;

  &.compact {
    margin-bottom: $space-min;
  }

  .form-horizontal & {
    display: flex;
    margin: {
      left: (-$grid-gutter-width / 2);
      right: (-$grid-gutter-width / 2);
    }
  }

  &.align-right {
    justify-content: flex-end;
  }

  &:last-child {
    margin-bottom: 0;
  }
}

.control-label {
  .form-horizontal & {
    text-align: right;
    padding-top: 3px;
  }
}

.form-control {
  display: block;
  width: 100%;
  height: $input-height-base;
  padding: 0 $padding-base-horizontal;
  font-family: inherit;
  font-size: $font-size-base;
  line-height: 2; // Better alignment of San Francisco
  color: $input-color;
  background: $input-bg;
  border: 1px solid $input-border;
  border-radius: $input-border-radius-small;
  box-shadow: none;
  transition: border-color ease 0.15s, box-shadow ease 0.15s;

  @include form-control-focus;

  &::-webkit-input-placeholder {
    color: $input-color-placeholder;
  }

  &[readonly],
  &[disabled] {
    background: $input-bg-readonly;
  }

  @at-root select#{&} {
    -webkit-appearance: none;
    line-height: 1;
    background-repeat: no-repeat;
    background-position: right $space-min center;
    background-image: if($theme == "light",
      image-url("project/icon-chevron7-light-theme.svg"),
      image-url("project/icon-chevron7-dark-theme.svg"));
  }
}

.input-lg {
  font-size: $font-size-large;
  height: $input-height-large;
  padding: 0 $padding-large-horizontal;
}

.form-text {
  display: flex;
  align-items: center;
  padding: (($input-height-base - $line-height-computed) / 2) $padding-base-horizontal;
}

.help-text {
  font-size: 11px;
  line-height: 16px;

  .form-text + & {
    padding: 0 $padding-base-horizontal;
    margin-top: -2px;
  }
}

.form-link {
  word-break: break-word;
}

.checkbox,
.radio {
  display: flex;

  &:first-child {
    padding-top: ($input-height-base - $line-height-computed) / 2;
  }

  &:last-child {
    padding-bottom: ($input-height-base - $line-height-computed) / 2;
  }

  label {
    flex: 1 1 auto;
    display: flex;
    padding-right: $padding-base-horizontal;
  }

  [type] {
    flex: 0 0 auto;
    -webkit-appearance: none;
    width: $checkbox-size;
    height: $checkbox-size;
    background: $checkbox-bg;
    border: 1px solid $input-border;
    margin: 3px ($space-min * 1.5) 0 0;
    position: relative;
    transition: border-color ease 0.15s, box-shadow ease 0.15s;

    &:active {
      background: $checkbox-checked-bg;
      border-color: $checkbox-checked-border;
    }

    &[disabled] {
      background: $input-bg-readonly;
      border-color: $input-border;
    }

    &:checked {
      background: $checkbox-checked-bg;
      border-color: $checkbox-checked-border;

      &:active {
        background: $checkbox-checked-active-bg;
        border-color: $checkbox-checked-active-border;
      }

      &[disabled] {
        background: $input-bg-readonly;
        border-color: $input-border;

        &:before,
        &:after {
          background: $checkbox-checked-bg;
        }
      }
    }

    fieldset & {
      background: $fieldset-input-bg;
      border-color: $fieldset-input-border;

      &[disabled] {
        background: $fieldset-input-bg-readonly;
        border-color: $fieldset-input-border;
      }

      &:checked {
        &[disabled] {
          background: $fieldset-input-bg-readonly;
          border-color: $fieldset-input-border;

          &:before,
          &:after {
            background: $checkbox-checked-bg;
          }
        }
      }
    }
  }
}

@each $input in checkbox, radio {
  .#{$input}.tab {
    [type="#{$input}"] {
      border-color: $input-color-focus;
      box-shadow: 0 0 0 2px $input-color-focus;

      &:checked {
        border-color: $input-color-focus;
        box-shadow: 0 0 0 2px $input-color-focus;
      }
    }
  }
}

.checkbox {
  [type="checkbox"] {
    border-radius: $border-radius-small;

    &:checked {
      &:before,
      &:after {
        content: "";
        position: absolute;
        left: 4px;
        top: 8px;
        height: 2px;
        border-radius: 1px;
        background: $tick-color;
        transform-origin: 1px 1px;
      }

      &:before {
        width: 5px;
        transform: translateX(-0.75px) rotate(-135deg) scaleY(0.75);
      }

      &:after {
        width: 10px;
        transform: translateX(-0.25px) rotate(-50.19deg) scaleY(0.75);
      }
    }
  }
}

.radio {
  [type="radio"] {
    border-radius: 50%;

    &:checked {
      &:before {
        content: "";
        position: absolute;
        top: 3px;
        right: 3px;
        bottom: 3px;
        left: 3px;
        background: $tick-color;
        border-radius: 50%;
      }
    }
  }
}

